# spatio

./: Cargo.toml  README.md  index.html  index.js
src/: ball.rs  boxx.rs  cartesian_axis.rs  colour.rs  lib.rs  matrix.rs  primitives.rs  triangle.rs  utils.rs
